style.css
/* ... */
section {
    max-width: 80rem;
    margin: 0 auto;
    padding: 4rem 1rem;
}


.icon {
    display: inline-block;
    width: 2.5rem;
    height: 2.5rem;
    background-repeat: no-repeat;
    background-size: cover;
}

.subheading {
    text-align: center;
    font-size: 2rem;
    margin-bottom: 2rem;
    text-transform: uppercase;
    color: #00ADB5;
}

/* Profile - Section */
.profile-section {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 4rem;
}

/* Profile - Card */
.profile-card {
    border-radius: 2rem;
    padding: 4rem 2rem;
    text-align: center;
    color: black;
    min-height: 100dvh;
}

.profile-picture {
    display: block;
    margin: 0 auto;
    width: 10rem;
    border-radius: 50%;
    margin-bottom: 1rem;
    border: 4px solid black;
}

.profile-name {
    font-size: 2rem;
    font-weight: bold;
}

.profile-career {
    font-size: 1.5rem;
    font-weight: normal;
}

.social-links-wrapper {
    display: flex;
    justify-content: center;
    margin-top: 2rem;
    gap: 1rem;
}

.social-icon {
    display: inline-block;
    width: 2.5rem;
    height: 2.5rem;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Profile - Info */
.profile-title {
    font-size: 3rem;
    margin-bottom: 2rem;
}

.subtitle-item {
    display: flex;
    align-items: center;
    font-size: 1.25rem;
    gap: 1rem;
    line-height: 1.5;
}

.subtitle-icon {
    width: 2rem;
    flex-shrink: 0;
}

.buttons-container {
    display: flex;
    gap: 1rem;
    align-items: center;
    margin-top: 2rem;
}

.button {
    padding: 0.75rem 1.5rem;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    border-radius: 0.25rem;
}

.button-project {
    background-color: #00ADB5;
    border: 1px solid #222831;
}

.button-certificate {
    border: 1px solid #222831;
}

/* Technology - Section */
.technology-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.5rem;
}

/* Technology - Card */
.technology-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    padding: 0.5rem;
    background-color: #222831;
    border-radius: 0.25rem;
    width: 8rem;
    height: 8rem;
    border-radius: 0.5rem;
}

.technology-icon {
    display: block;
    width: 3rem;
    height: 3rem;
    background-size: cover;
}

.technology-title {
    color: #EEEEEE;
    font-weight: normal;
    font-size: 1rem;
}

/* Project - Section */
.project-section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
    width: 100%;
}

/* Project - Card */
.project-card {
    width: 18rem;
    background-color: #00ADB5;
    padding: 1rem;
    border-radius: 0.5rem;
    color: black;

}

.project-title {
    font-size: 1.25rem;
    margin-bottom: 0.5rem;
}

.project-description {
    line-height: 1.75;
}

.project-arrow {
    font-size: 2rem;
}

/* Responsive Design */
@media screen and (min-width:600px) {
    section {
        padding-inline: 2rem;
    }
}

@media screen and (min-width:1000px) {
    section {
        padding: 4rem;
    }

    .profile-section {
        flex-direction: row-reverse;
        align-items: center;
    }

    .profile-card {
        flex: 1 0 20rem;
        min-height: auto;
    }

    .profile-title {
        font-size: 4rem;
    }

    .profile-subtitle {
        width: 75%;
    }

    .social-icon:hover {
        transform: scale(1.25);
    }

    .button-project:hover,
    .button-certificate:hover {
        box-shadow: 0 0.15rem 0.25rem #222831;
        transform: scale(1.05);
    }

    .technology-card {
        transition: transform 0.5s linear;
    }

    .technology-card:hover {
        transform: scale(1.5);
        box-shadow: 0 0 1rem black;
    }

    .project-card {
        transition: background-color 0.5s linear;
    }

    .project-card:hover {
        background-color: #222831;

        .project-title,
        .project-description {
            color: #EEEEEE;
        }

        .project-arrow {
            text-align: right;
        }
    }

}

@media screen and (min-width: 2000px) {
    :root {
        font-size: 24px;
    }
}


/* Icons */
.gmail-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64' fill='none' viewBox='0 0 64 64'%3e%3crect width='64' height='64' fill='black' rx='32'/%3e%3cpath fill='white' d='M48 23.272v18.546A2.182 2.182 0 0 1 45.82 44h-5.094V31.637L32 38.184l-8.727-6.547V44H18.18A2.18 2.18 0 0 1 16 41.82V23.273a3.273 3.273 0 0 1 5.244-2.613l-.008-.006L32 28.728l10.763-8.074A3.273 3.273 0 0 1 48 23.272Z'/%3e%3c/svg%3e");
}
/* ... */

